--- a/gui_testing_modified/website_proj2gui.ui
+++ b/gui_testing_modified/website_proj2gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>573</width>
+    <width>610</width>
     <height>702</height>
    </rect>
   </property>
@@ -119,14 +119,14 @@ color: rgb(255, 255, 255);</string>
      </font>
     </property>
     <property name="text">
-     <string>Contact us:</string>
+     <string>Contact Us -</string>
     </property>
    </widget>
    <widget class="QLabel" name="phone_label">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>560</y>
+      <y>540</y>
       <width>271</width>
       <height>81</height>
      </rect>
@@ -178,12 +178,36 @@ color: rgb(255, 255, 255);</string>
       <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Gocars</string>
+      <string>TorqueCart</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>210</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Oswald SemiBold</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>OFFERS!</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -191,8 +215,8 @@ color: rgb(255, 255, 255);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>573</width>
-     <height>18</height>
+     <width>610</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
