Fixed issue of confirm window not closing

--- a/gui_testing_modified/login_confirm.ui
+++ b/gui_testing_modified/login_confirm.ui
@@ -35,7 +35,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="enterButton">
     <property name="geometry">
      <rect>
       <x>10</x>
