--- a/gui_testing_modified/buyConfirmWindow.ui
+++ b/gui_testing_modified/buyConfirmWindow.ui
@@ -71,9 +71,9 @@ color: rgb(255, 255, 255);</string>
    <widget class="QLabel" name="inputProdName">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>460</x>
       <y>120</y>
-      <width>351</width>
+      <width>431</width>
       <height>111</height>
      </rect>
     </property>
@@ -103,12 +103,12 @@ color: rgb(255, 255, 255);</string>
      <string>Price :</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="costLabel">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>460</x>
       <y>220</y>
-      <width>351</width>
+      <width>431</width>
       <height>131</height>
      </rect>
     </property>
@@ -136,6 +136,26 @@ color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Place Order</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="backButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>510</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
     </property>
    </widget>
   </widget>
