--- a/gui_testing_modified/website_proj2gui.ui
+++ b/gui_testing_modified/website_proj2gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>610</width>
-    <height>702</height>
+    <width>1107</width>
+    <height>740</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,130 +17,113 @@
    <widget class="QPushButton" name="tyreButton">
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>130</y>
-      <width>121</width>
+      <x>250</x>
+      <y>180</y>
+      <width>161</width>
       <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 18pt &quot;Segoe UI&quot;;
-background-color: rgb(186, 23, 23);
+background-color: rgb(0,0,0);
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Tyres </string>
     </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/icons8-tyre-64.png</normaloff>../../../../../Downloads/icons8-tyre-64.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>70</width>
+      <height>70</height>
+     </size>
+    </property>
    </widget>
    <widget class="QPushButton" name="steeringButton">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>130</y>
-      <width>121</width>
-      <height>81</height>
+      <x>420</x>
+      <y>170</y>
+      <width>201</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 15pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
-background-color: rgb(186, 23, 23);</string>
+background-color: rgb(0,0,0);</string>
     </property>
     <property name="text">
      <string>Steering</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/icons8-steering-99 (1).png</normaloff>../../../../../Downloads/icons8-steering-99 (1).png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>70</width>
+      <height>70</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="engineButton">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>130</y>
-      <width>121</width>
+      <x>630</x>
+      <y>180</y>
+      <width>191</width>
       <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 18pt &quot;Segoe UI&quot;;
-background-color: rgb(186, 23, 23);
+background-color: rgb(0, 0, 0);
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Engine</string>
     </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/icons8-car-engine-64.png</normaloff>../../../../../Downloads/icons8-car-engine-64.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>70</width>
+      <height>70</height>
+     </size>
+    </property>
    </widget>
    <widget class="QPushButton" name="suspensionButton">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>130</y>
-      <width>121</width>
+      <x>240</x>
+      <y>570</y>
+      <width>181</width>
       <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 11pt &quot;Segoe UI&quot;;
-background-color: rgb(186, 23, 23);
+background-color: rgb(0,0,0);
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Suspension</string>
     </property>
-   </widget>
-   <widget class="QLabel" name="emailLabel">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>470</y>
-      <width>591</width>
-      <height>81</height>
-     </rect>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/icons8-suspension-64 (1).png</normaloff>../../../../../Downloads/icons8-suspension-64 (1).png</iconset>
     </property>
-    <property name="font">
-     <font>
-      <family>Impact</family>
-      <pointsize>20</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Email: torquecart123@gmail.com</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="contactLabel">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>400</y>
-      <width>341</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Impact</family>
-      <pointsize>26</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Contact Us -</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="phone_label">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>540</y>
-      <width>441</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Impact</family>
-      <pointsize>20</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Phone: +91 1234567890</string>
+    <property name="iconSize">
+     <size>
+      <width>70</width>
+      <height>70</height>
+     </size>
     </property>
    </widget>
    <widget class="QFrame" name="frame">
@@ -148,12 +131,12 @@ color: rgb(255, 255, 255);</string>
      <rect>
       <x>-91</x>
       <y>-21</y>
-      <width>701</width>
+      <width>1191</width>
       <height>131</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(186, 23, 23);</string>
+     <string notr="true">background-color: rgb(0,0,0);</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -161,65 +144,188 @@ color: rgb(255, 255, 255);</string>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="main_header_name">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>20</y>
-       <width>531</width>
-       <height>111</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>36</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
-     </property>
-     <property name="text">
-      <string>TorqueCart</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>210</y>
-      <width>121</width>
-      <height>31</height>
+      <x>0</x>
+      <y>0</y>
+      <width>1101</width>
+      <height>691</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::AutoText</enum>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../../../Desktop/idk2.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="main_header_name">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>1081</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Oswald SemiBold</family>
-      <pointsize>10</pointsize>
+      <family>Moonglade DEMO</family>
+      <pointsize>36</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
-     <string>OFFERS!</string>
+     <string>T O R Q U E      C A R T</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>180</y>
+      <width>20</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>180</y>
+      <width>20</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="engineButton_2">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>570</y>
+      <width>191</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 18pt &quot;Segoe UI&quot;;
+background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string> Exhaust</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/icons8-exhaust-64.png</normaloff>../../../../../Downloads/icons8-exhaust-64.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>70</width>
+      <height>70</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="engineButton_3">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>570</y>
+      <width>171</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 18pt &quot;Segoe UI&quot;;
+background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string> Oil</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../Downloads/icons8-oil-64.png</normaloff>../../../../../Downloads/icons8-oil-64.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>60</width>
+      <height>60</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="Line" name="line_4">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>560</y>
+      <width>20</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_5">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>560</y>
+      <width>20</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <zorder>label</zorder>
+   <zorder>tyreButton</zorder>
+   <zorder>steeringButton</zorder>
+   <zorder>engineButton</zorder>
+   <zorder>suspensionButton</zorder>
+   <zorder>frame</zorder>
+   <zorder>main_header_name</zorder>
+   <zorder>line</zorder>
+   <zorder>line_2</zorder>
+   <zorder>engineButton_2</zorder>
+   <zorder>engineButton_3</zorder>
+   <zorder>line_4</zorder>
+   <zorder>line_5</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>610</width>
-     <height>18</height>
+     <width>1107</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
