--- a/gui_testing_modified/LOGIN.ui
+++ b/gui_testing_modified/LOGIN.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>Downloads/torqucart.jpg</pixmap>
+    <pixmap>torqucart.jpg</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
