--- a/gui_testing_modified/wheels window.ui
+++ b/gui_testing_modified/wheels window.ui
@@ -45,7 +45,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap>../../../../../linet/Downloads/torqucart.jpg</pixmap>
+      <pixmap>torqucart.jpg</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
