--- a/gui_testing_modified/LOGIN.ui
+++ b/gui_testing_modified/LOGIN.ui
@@ -35,18 +35,18 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>10</y>
-     <width>841</width>
+     <x>260</x>
+     <y>40</y>
+     <width>651</width>
      <height>121</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(191, 191, 191);
-font: 42pt &quot;ROG Fonts&quot;;</string>
+font: 42pt &quot;Asus Rog&quot;;</string>
    </property>
    <property name="text">
-    <string>Torque Cart</string>
+    <string>TORQUE CART</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
@@ -95,7 +95,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>310</x>
      <y>380</y>
      <width>211</width>
      <height>41</height>
@@ -205,7 +205,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>300</y>
+     <y>290</y>
      <width>391</width>
      <height>41</height>
     </rect>
